--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
+apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.android.library'
 
+group='com.github.DomusGroup'
 android {
     compileSdkVersion 25
     buildToolsVersion "26.0.2"
@@ -21,6 +23,7 @@ android {
     }
 }
 
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -28,5 +31,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.github.jitpack:gradle-simple:1.0'
     testCompile 'junit:junit:4.12'
 }
